# A-Rigorous-Study-Of-The-Deep-Taylor-Decomposition

./: .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  code_release.sh  download_datasets.sh  env.sh  makefile  mkdocs.yml  pyproject.toml  setup.cfg  syncing.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
docs/: api.md  installation.md  usage.md
lrp_relations/: __main__.py  data.py  dtd.py  dtd_full_backward.py  enable_deterministic.py  figures.py  gt_eval.py  local_linear.py  lrp.py  preprocess_clevr.py  preprocess_clevr_xai.py  sample_2d_function.py  sanity_checks.py  sanity_checks_for_relation_networks.py  sequential_lr_fix.py  train_clevr.py  utils.py
lrp_relations/notebooks/: check_network_sensitivity_for_input_roots.ipynb  check_upper_relevance_constant.ipynb  dtd.ipynb  dtd_analyze_full_backward_results.ipynb  dtd_local_linear_roots.ipynb  dtd_precise.ipynb  dtd_show_roots.ipynb  figures.ipynb  figures_for_sanity_checks.ipynb  load_clevr_xai.ipynb  local_linear.ipynb  negative_biases.ipynb
sanity_checks_for_relation_networks/: __init__.py  __main__.py  fit_ols.py  preprocess_clevr.py  sanity_checks_for_relation_networks.py
tests/: __init__.py  test_dtd.py  test_gt_eval.py  test_local_linear.py  test_sanity_checks.py  test_sanity_checks_for_relation_networks.py
