[tool]
[tool.poetry]
authors = ["Leon Sixt <github@leon-sixt.de>"]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
]
description = "Apply the sanity checks to relation networks."
homepage = "https://github.com/berleon/sanity_checks_for_relation_networks"
license = "MIT"
name = "sanity_checks_for_relation_networks"
packages = [
  {include = "lrp_relations"},
  {include = "tests", format = "sdist"},
  {include = "relation_network"},
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
matplotlib = {version = "^3.2.1", optional = true}
numpy = {version = "^1.18.1", optional = true}
pandas = {version = "^1.0.1", optional = true}
python = ">=3.9,<4.0"
savethat = {git = "https://github.com/berleon/savethat", branch = "main"}
# scikit-learn = {version = "^0.22.1", optional = true}
captum = "^0.5.0"
clevr-xai = {git = "https://github.com/berleon/clevr-xai.git", rev = "poetry"}
nltk = "^3.7"
torch = "^1.11.0"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]

black = "^22.3.0"
cookiecutter = "^1.7.3"
flake8 = "^4.0.1"
isort = "^5.10.1"
mkdocs = "^1.3.0"
mkdocs-autorefs = "^0.4.1"
mkdocs-include-markdown-plugin = "^3.4.0"
mkdocs-material = "^8.2.14"
mkdocstrings = "^0.18.1"
mypy = "^0.950"
pip = "^22.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
python-lsp-server = {extras = ["all"], version = "^1.4.1"}
tox = "^3.20.1"
twine = "^4.0.0"
virtualenv = "^20.2.2"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | relation_network
)/
'''
include = '\.pyi?$'
line-length = 80
skip-string-normalization = false
target-version = ['py39']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 80
multi_line_output = 3
skip_gitignore = true
use_parentheses = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = true
no_implicit_optional = true
python_version = 3.9
show_error_codes = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true

exclude = [
  'relation_network/',
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "captum",
  "captum.*",
  "coverage",
  "matplotlib",
  "nltk",
  "pandas",
  "PIL",
  "relation_network",
  "relation_network.*",
  "scipy.*",
  "setuptools",
  "sklearn",
  "sklearn.*",
  "torchvision",
  "tqdm.*",
  "typing_inspect",
]
